[fix] [style] radio buttons for .photo maps less high up prevents page jumping under more circumstances

--- a/_includes/photo-map-meta.css
+++ b/_includes/photo-map-meta.css
@@ -22,7 +22,7 @@ label:hover {
 }
 
 input {
-  bottom: 2em;
+  bottom: 50%;
   left: -10000px;
 }
 
